# datadog-api-client

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: api.rs  client.rs  error.rs  lib.rs  models.rs
src/api/api_management/: mod.rs
src/api/apm_retention_filters/: mod.rs
src/api/audit/: mod.rs
src/api/authentication/: mod.rs
src/api/authn_mappings/: mod.rs
src/api/aws_integration/: mod.rs
src/api/aws_logs_integration/: mod.rs
src/api/azure_integration/: mod.rs
src/api/ci_visibility_pipelines/: mod.rs
src/api/ci_visibility_tests/: mod.rs
src/api/cloud_cost_management/: mod.rs
src/api/cloud_workload_security/: mod.rs
src/api/cloudflare_integration/: mod.rs
src/api/confluent_cloud/: mod.rs
src/api/container_images/: mod.rs
src/api/containers/: mod.rs
src/api/dashboard_lists/: mod.rs
src/api/dashboards/: mod.rs
src/api/dora_metrics/: mod.rs
src/api/metrics/: mod.rs
src/models/api_management/: mod.rs
src/models/apm_retention_filters/: mod.rs
src/models/audit/: mod.rs
src/models/authentication/: mod.rs
src/models/client/: mod.rs
src/models/metrics/: mod.rs
tests/: api_management.rs  apm_retention_filters.rs  audit.rs  authentication.rs  metrics.rs
