[package]
name = "datadog-api-client"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["datadog", "api", "client"]
categories = ["api-bindings"]
repository = "https://github.com/joacoc/datadog-api-client/"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11.23",  features = ["json"] }
thiserror = "1.0.56"
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
serde_qs = "0.12.0"
serde_json = "1.0"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt"] }
wiremock = "0.5"